--- a/code.ipynb
+++ b/code.ipynb
@@ -6,7 +6,7 @@
     "id": "C8_vftSdxxTc"
    },
    "source": [
-    "## **Physics 77 Final Project**\n",
+    "## **Code for Higgs Boson Analysis Through Diphoton Decay Channels**\n",
     "\n",
     "Keith Chiang (SID: 3039957102)"
    ]
